--- a/vistas/modulos/copia.html
+++ b/vistas/modulos/copia.html
@@ -79,7 +79,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
 
-      <form role="form" method="post">
+      <form action="post" role="form">
 
           <div class="modal-header bg-secondary">
             <h4 class="modal-title fs-5" id="exampleModalLabel">  Agregar usuario  </h4>
@@ -143,13 +143,6 @@
           <button type="submit" class="btn btn-secondary">Guardar usuario</button>
             
           </div>
-          
-        <?php
-
-            $crearUsuario = new ControladorUsuarios();
-            $crearUsuario -> ctrCrearUsuario();
-
-?>
 
       </form>
     </div>
