cambios el sweet alert

--- a/vistas/modulos/copia.html
+++ b/vistas/modulos/copia.html
@@ -79,7 +79,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
 
-      <form action="post" role="form">
+      <form action="post" role="form" enctype="multipart/form-data">
 
           <div class="modal-header bg-secondary">
             <h4 class="modal-title fs-5" id="exampleModalLabel">  Agregar usuario  </h4>
